# gitea_autotests

./: .cursorrules  .cursorrules.txt  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  ПАМЯТЬ.md
.ai/memory/: README.md
.ai/memory/backlog/: 2026-05-26_bot-infrastructure-and-first-run.md
.ai/memory/business/: README.md
.ai/memory/design/: README.md
.ai/memory/iterations/: 2026-05-12_11-02_ci-fixes-and-refactoring.md  2026-05-12_17-42_ci-pipeline-fixes.md  2026-05-12_18-26_ci-final-fixes.md  2026-05-12_critical-components-implementation.md  2026-05-12_documentation-unification.md  2026-05-23_22-55_gitea-test-coverage-structure.md  2026-05-25_21-51_ci-fixes-bot-integration-phases-A-D.md  2026-05-25_ci-selfhosted-gitea-fixes.md  2026-05-25_phases-A-D-implementation.md  2026-05-26_11-36_tms-production-and-test-level-markers.md  README.md
.ai/memory/tech/: 2026-05-23_gitea-test-coverage.md  2026-05-25_ci-and-bot-integration.md
.cursor/prompts/: README.md  new-chat-template.md  next-session-bot-integration.md
.github/actions/setup-gitea/: action.yml
.github/workflows/: ci.yml  e2e-tests.yml  e2e.yml
allure/: index.html
allure/data/: behaviors.csv  behaviors.json  categories.csv  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure/data/attachments/: 152a1c44eed1d85.txt  171625b199f2ae1.txt  177f9005d79cc6e9.txt  19f2cf5bd9b43995.txt  1ceb8b1fb5b8555b.txt  1d66a3a505d158d1.txt  1eb3778528caf0cd.txt  1ed5902a6d82d9ff.txt  203c8c9d75c3e53e.txt  24ff5e2cbc92f6b8.txt  266a58d7b60c6612.txt  26c0ec66ff70bb6.txt  2741204eabfbb128.txt  27c459e9c62be09e.txt  2884ee308ef012f.txt  29525a2cc613193e.txt  29945a73550b1273.txt  2a1dbc0c61869729.txt  2b6bc5528b2983cf.txt  2efcbda87d50a026.txt  3040f721e1bf0001.txt  30f5ea206dbb82c4.txt  315c75003e92f6a8.txt  322930eb943ca18c.txt  34b8c1814f3d67a6.txt  38a070644e60a5e0.txt  394c8a95af2b72ba.txt  3c034ff1890fa8b6.txt  3c9e683756fe2b93.txt  3cc597b9ed6c14e4.txt  3cff2d0e5c9e3697.txt  3d970b933cb9fa5f.txt  3df9afc177f7a893.txt  3e82fea38ef36d96.txt  3e866536392b96cb.txt  42c44c59e5c5cc54.txt  42d9d2d43a143c23.txt  43b8d0f11db4abc0.txt  4474f03b6ee538bc.txt  467363ea15d89e64.txt  (+149 more)
allure/data/test-cases/: 1062d17fbaa85cb9.json  106fa8a2a27f8517.json  108cdfc57e1139c1.json  1099681ecac4c82a.json  10ccb27f70dd0b8f.json  10f0feac74845e7e.json  1128773024a135c2.json  113c03bd498d614f.json  119c7a7dc1253842.json  11e6b33cc05f1e6.json  11ed16bedaa8ddd8.json  126affb665fd98fa.json  137f283025a3d56a.json  13ba289b5612be0.json  141e0ff0c7b6b973.json  146e88efed857898.json  150d3ab4055368ef.json  152eb2d997dbae7b.json  1538617a34555656.json  15d7f4d28e6de210.json  162bb4f68984a594.json  168158c000ba7416.json  16a9c712c0b28cdd.json  16ab5a8a7b6da981.json  17b9d789f4196a57.json  17c2a5546ae1f95e.json  17e01b4b9ff28a88.json  (+801 more)
allure/export/: influxDbData.txt  prometheusData.txt
allure/history/: duration-trend.json  history.json  retry-trend.json
allure/widgets/: categories-trend.json  categories.json  duration-trend.json  duration.json  history-trend.json  retry-trend.json  severity.json  status-chart.json  suites.json  summary.json
scripts/: seed_gitea.py  tms_reporter.py
src/: __init__.py
src/api/: clients.py  gitea.py
src/config/: __init__.py  settings.py
src/db/: engine.py
src/pages/: __init__.py  base_component.py  gitea_components.py
src/testing/: __init__.py  factories.py  pytest_support.py
src/utils/: __init__.py  logger.py
tests/: conftest.py  support.py
tests/components/: test_gitea_components.py  test_gitea_helpers.py  test_gitea_new_components.py
tests/e2e/: test_gitea_api.py  test_gitea_authenticated_smoke.py  test_gitea_ui.py
tests/integration/: test_gitea_api.py  test_gitea_labels_milestones.py  test_gitea_ui.py
tests/unit/: test_gitea_helpers.py  test_tms_reporter.py
